--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,31 +1,19 @@
-pipeline {
-    agent any
+node {
 
-    stages {
-        stage('Build') {
-            steps {
-                sh 'make' 
-                archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true 
-            }
-        }
-       stage('Test') {
-            steps {
-                /* `make check` returns non-zero on test failures,
-                * using `true` to allow the Pipeline to continue nonetheless
-                */
-                sh 'make check || true' 
-                junit '**/target/*.xml' 
-            }
-        }
-        stage('Deploy') {
-            when {
-              expression {
-                currentBuild.result == null || currentBuild.result == 'SUCCESS' 
-              }
-            }
-            steps {
-                sh 'make publish'
-            }
-        }
-    }
+stage('Build'){
+
+echo 'building the project .....'
+}
+stage('Test'){
+
+echo 'Testing the project .....'
+}
+stage('Deploy'){
+
+echo 'Deploying the project .....';
+}
+stage('Release'){
+
+echo 'Release the project .....';
+}
 }
