--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,27 +4,25 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                sh 'make' 
-                archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true 
+                echo 'Building the code..'
+				bat "mvn clean"
             }
         }
-       stage('Test') {
+        stage('Test') {
             steps {
-                /* `make check` returns non-zero on test failures,
-                * using `true` to allow the Pipeline to continue nonetheless
-                */
-                sh 'make check || true' 
-                junit '**/target/*.xml' 
+                echo 'Testing the code..'
+				bat "mvn clean"
+            }
+        }
+		stage('Compile') {
+            steps {
+                echo 'Compile the code....'
+				bat "mvn compile"
             }
         }
         stage('Deploy') {
-            when {
-              expression {
-                currentBuild.result == null || currentBuild.result == 'SUCCESS' 
-              }
-            }
             steps {
-                sh 'make publish'
+                echo 'Deploying....'
             }
         }
     }
